--- a/index.html
+++ b/index.html
@@ -70,11 +70,29 @@ footer { text-align:center; font-size:0.85em; color:#888; padding:15px 0; backgr
 <div class="note">After booking, please DM <b>@pixelnailz</b> on Instagram for e-transfer and inspo pic 💖</div>
 </div>
 
+<div class="container" id="cancelContainer">
+<h2>Cancel Appointment</h2>
+<form id="cancelForm">
+<label for="cancelEmail">Email</label>
+<input type="email" id="cancelEmail" required>
+
+<label for="cancelDate">Date</label>
+<input type="text" id="cancelDate" placeholder="Select a date" required>
+
+<label for="cancelTime">Time</label>
+<select id="cancelTime" required>
+<option value="12:00 PM">12:00 PM</option>
+</select>
+
+<button type="submit">Cancel Appointment</button>
+</form>
+</div>
+
 <footer>© 2025 PixelNailz</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 <script>
-const WEB_APP_URL = "YOUR_WEB_APP_URL_HERE"; // replace with your Apps Script URL
+const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbyUqh_l2OcpEopSqX_I1uMwCtBf1mdvDxqaBJ46tTzpgnkH9Xdpq0JUfi7RB_6ZEu5E/exec";
 
 // Show length field only for Acrylic Full Set
 document.getElementById("service").addEventListener("change", function() {
@@ -99,6 +117,12 @@ async function initBookingDatepicker() {
   }
 }
 initBookingDatepicker();
+
+// Cancel form datepicker
+flatpickr("#cancelDate", {
+  dateFormat: "Y-m-d",
+  enable: ["2025-09-07","2025-09-13","2025-09-14","2025-09-20","2025-09-21","2025-09-27","2025-09-28"]
+});
 
 // Booking submission
 document.getElementById("bookingForm").addEventListener("submit", async function(e){
@@ -125,7 +149,8 @@ document.getElementById("bookingForm").addEventListener("submit", async function
     if (data.status === "success") {
       msgDiv.className = "success";
       msgDiv.innerText = data.message;
-      initBookingDatepicker(); // refresh calendar
+      // Refresh datepicker to disable booked date
+      initBookingDatepicker();
       document.getElementById("bookingForm").reset();
       document.getElementById("lengthField").classList.add("hidden");
     } else {
