--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 <style>
 body {
   font-family: Arial, sans-serif;
-  background: #ffe6f0 url('https://i.ibb.co/w0g8VJ6/flower-pattern.png') repeat; /* light pink + floral pattern */
-  background-size: 150px 150px;
+  background: #ffe6f0; /* light pink background */
   margin: 0;
   padding: 0;
 }
