--- a/index.html
+++ b/index.html
@@ -27,10 +27,7 @@ header {
   border-radius: 12px;
   box-shadow: 0 4px 8px rgba(0,0,0,0.1);
 }
-h2 {
-  text-align: center;
-  color: #d63384;
-}
+h2 { text-align: center; color: #d63384; }
 form { display:flex; flex-direction: column; margin-top:20px; }
 label { margin:8px 0 4px; font-weight:bold; }
 input, select, button {
@@ -109,7 +106,7 @@ footer { text-align:center; font-size:0.85em; color:#888; padding:15px 0; backgr
 
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 <script>
-const WEB_APP_URL = "YOUR_WEB_APP_URL_HERE"; // replace with your Apps Script web app URL
+const WEB_APP_URL = "YOUR_WEB_APP_URL_HERE"; // Replace with your Apps Script URL
 const allowedDates = ["2025-09-07","2025-09-13","2025-09-14","2025-09-20","2025-09-21","2025-09-27","2025-09-28"];
 
 document.getElementById("service").addEventListener("change", function() {
@@ -117,27 +114,33 @@ document.getElementById("service").addEventListener("change", function() {
   this.value === "Acrylic Full Set" ? lengthField.classList.remove("hidden") : lengthField.classList.add("hidden");
 });
 
-// Fetch booked dates and initialize calendar
+let fpInstance; // Flatpickr instance
+
+// Initialize or refresh booking calendar
 async function initBookingCalendar() {
   try {
     const res = await fetch(WEB_APP_URL + "?action=fetch");
     const data = await res.json();
-    const bookedDates = data.booked || []; // booked dates from Google Sheet
+    const bookedDates = data.booked || [];
 
-    // Enable only allowed dates that are not booked
     const availableDates = allowedDates.filter(d => !bookedDates.includes(d));
 
-    flatpickr("#date", {
+    // Destroy old instance if exists
+    if(fpInstance) fpInstance.destroy();
+
+    fpInstance = flatpickr("#date", {
       dateFormat: "Y-m-d",
       enable: availableDates,
       minDate: "today"
     });
+
   } catch (err) {
     console.error("Failed to fetch booked dates:", err);
-    // fallback: show all allowed dates
-    flatpickr("#date", { dateFormat:"Y-m-d", enable: allowedDates, minDate: "today" });
+    if(fpInstance) fpInstance.destroy();
+    fpInstance = flatpickr("#date", { dateFormat:"Y-m-d", enable: allowedDates, minDate: "today" });
   }
 }
+
 initBookingCalendar();
 
 // Booking submission
@@ -167,9 +170,9 @@ document.getElementById("bookingForm").addEventListener("submit", async function
     if(data.status === "success") {
       msgDiv.className = "success";
       msgDiv.innerText = data.message;
-      initBookingCalendar(); // refresh calendar
       this.reset();
       document.getElementById("lengthField").classList.add("hidden");
+      await initBookingCalendar(); // Refresh calendar and grey out newly booked dates
     } else {
       msgDiv.className = "error";
       msgDiv.innerText = data.message;
