--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ footer { text-align:center; font-size:0.85em; color:#888; padding:15px 0; backgr
 
 <button type="submit">Book Appointment</button>
 </form>
-<div class="note">After booking, please DM <b>@pixelnailz</b> on Instagram for e-transfer and inspo pic 💖</div>
+<div class="note">After booking, please DM <b>@pixelnailz</b> on Instagram to get the e-transfer email for your $10 NON-REFUNDABLE DESPOIT and to send your inspo pic 💖</div>
 </div>
 
 <footer>© 2025 PixelNailz</footer>
