--- a/index.html
+++ b/index.html
@@ -99,7 +99,12 @@ footer { text-align:center; font-size:0.85em; color:#888; padding:15px 0; backgr
 
 <button type="submit">Book Appointment</button>
 </form>
-<div class="note">After booking, please DM <b>@pixelnailz</b> on Instagram to get the e-transfer email for your $10 NON-REFUNDABLE DESPOIT and to send your inspo pic 💖</div>
+<div class="footer-note">
+  <strong>After booking, please DM @pixelnails for the following:</strong>
+  <ol>
+    <li>Get e-transfer email to send your <strong>$10 NON-REFUNDABLE deposit</strong> within 24 hours (otherwise appointment will be cancelled)</li>
+    <li>Send your inspo pic! 💖</li>
+  </ol>
 </div>
 
 <footer>© 2025 PixelNailz</footer>
